src/objects/Case_Creation_Indicator__c.object
<CustomObject><fields>
        <fullName>Academic_Status_Date__c</fullName>
        <label>Academic Status Date</label>
        
        <type>Date</type>
    </fields><fields>
        <fullName>Academic_Status_Reasons_Actions__c</fullName>
        <label>Academic Status Report Actions</label>
        <length>255</length>
        
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Academic_Status_Reasons__c</fullName>
        <label>Academic Status Reasons</label>
        <length>255</length>
        
        <type>Text</type>
    </fields><fields>
        <fullName>Academic_Status_Report__c</fullName>
        <label>Academic Status Report Comments</label>
        <length>4500</length>
        <type>LongTextArea</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
        </picklist>
        
        <type>Picklist</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Class_Nbr__c</fullName>
        <label>Class Nbr</label>
        <length>10</length>
        
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <length>50</length>
        
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Case</label>
        
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EMPLID__c</fullName>
        <formula>Success_Student__r.Student__r.EMPLID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMPLID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Indicator_Case_Type__c</fullName>
        <description>to identify the case type for each case created when indicator flag is populated</description>
        <label>Indicator Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>CCI flag initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Indicator_Type__c</fullName>
        <label>Indicator Type</label>
        <picklist>
            <picklistValues>
                <fullName>Academic DQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Status Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied for Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB Access Minutes in bottom 1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB Activity in bottom 1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB Grade in bottom 1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB Login &gt; 8 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB New Class no log in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB No Activity &gt; 4 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Prep Check-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEW Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop/Withdrawn - One Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped All Classes in Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eAdvisor Off Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Week Check-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold(s) exist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Session Check-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Student Welcome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reg 12 Weeks after Reg Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reg 16 Weeks after Reg Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reg 20 Weeks after Reg Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reg 24 Weeks after Reg Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reg 28 Weeks after Reg Open</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        
        <type>Picklist</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>STRM__c</fullName>
        <label>Term</label>
        <length>10</length>
        
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Session_Code__c</fullName>
        <label>Session Code</label>
        <length>10</length>
        
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Session_Decode__c</fullName>
        <label>Session Decode</label>
        <length>10</length>
        
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Session__c</fullName>
        <label>Session</label>
        <length>50</length>
        
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Success_Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Student</label>
        <referenceTo>Success_Student__c</referenceTo>
        <relationshipLabel>Case Creation Indicators</relationshipLabel>
        <relationshipName>Case_Creation_Indicators_del</relationshipName>
        
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Case Creation Indicator</label><nameField>
        <displayFormat>CCI-{0}</displayFormat>
        <label>Case Creation Indicator ID</label>
        
        <type>AutoNumber</type>
    </nameField><pluralLabel>Case Creation Indicators</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All_with_Details</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>EMPLID__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Indicator_Case_Type__c</columns>
        <columns>Indicator_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All with Details</label>
    </listViews><listViews>
        <fullName>CCI_with_Session</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>EMPLID__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Indicator_Case_Type__c</columns>
        <columns>Indicator_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Session__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CCI with Session</label>
    </listViews></CustomObject>